# SmartAquariumGuardian

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  generate_i18n.py  partitions.csv  platformio.ini
components/: lv_conf.h
data/: loc_ids.csv
framework/: common_defs.h  commondefs.h  debug_defs.h  pin_names.h
hardware/: .gitignore  README.md
include/: config.h  network_commands.h  network_config.h
scripts/: run_doxygen.py
src/: CMakeLists.txt  main.cpp  smart_aquarium_guardian.cpp  smart_aquarium_guardian.h
src/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_panel.c  ui_comp_panel.h
src/ui/fonts/: ui_font_Big_Number.c  ui_font_Bold_Font.c  ui_font_OpenSanSemibold42.c  ui_font_OpenSansSemibold42.c  ui_font_OpenSansSemibold44.c
src/ui/images/: ui_img_502125874.c  ui_img_background_png.c  ui_img_battery_full_alt_20dp_png.c  ui_img_battery_horiz_000_20dp_png.c  ui_img_battery_horiz_050_20dp_png.c  ui_img_battery_horiz_075_20dp_png.c  ui_img_battery_low_20dp_png.c  ui_img_icn_cloud_off_png.c  ui_img_icn_cloud_on_png.c  ui_img_icn_down_arrow_png.c  ui_img_icn_food_png.c  ui_img_icn_range_arrow_png.c  ui_img_icn_tds_png.c  ui_img_icn_temp_png.c  ui_img_icn_up_arrow_png.c  ui_img_icn_wifi_off_png.c  ui_img_icn_wifi_on_png.c  ui_img_logo_white_130x130_png.c  ui_img_wifi_find_20dp_ffffff_fill0_wght400_grad0_opsz20_png.c
src/ui/screens/: ui_Screen.c  ui_Screen.h  ui_SplashScreen.c  ui_SplashScreen.h
(+853 files in other folders)
